<resources>
    <string name="app_name">EgoWall_Android</string>
    <string name="egowall">Egowall</string>
    <string name="signup">Sign Up</string>
    <string name="next">Next</string>
    <string name="egowall_image_is_not_found">EgoWall image is not found</string>
    <string name="be_the_real_you">Be the real you</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password">Password *</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="by_signing_in_you_agree_to_our_terms_conditions">
        <![CDATA[By Signing In, you agree to our terms & conditions]]></string>
    <string name="email_phone_data">Enter Email or Phone</string>
    <string name="welcome_back_please_login_to_your_account">Welcome back, please login to your account.</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="select_your_preferred_language">Select Your Preferred Language</string>
    <string name="select_country">Select Country</string>
    <string name="continue_text">Continue</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>
    <string name="field_required">Field Required</string>
    <string name="onboarding_enter_data">Onboarding enter data</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_select_your_language">Please Select Your Language</string>
    <string name="mic_testing_for_asr">Mic Testing (for ASR)</string>
    <string name="please_read_following_sentence">Please Read Following Sentence:</string>
    <string name="please_retry_following_sentence">Please Retry Following Sentence:</string>
    <string name="onboarding_enter_data_fragment">Onboarding Enter Data Fragment</string>
    <string name="user_name">User Name</string>
    <string name="selected_language">Selected Language</string>
    <string name="selected_language_sname">Selected Language Short Name</string>
    <string name="selected_country">Selected Country</string>
    <string name="hello">Hello</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="not_supported">This Language is not supported</string>
    <string name="space">\u0020</string>
    <string name="dot">.</string>
    <string name="image">image</string>
    <string name="login_activity">Login Activity</string>
    <string name="welcome">Welcome</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password *</string>
    <string name="i_accept_terms_conditions">I accept terms &amp; conditions and privacy policy.</string>
    <string name="email_required">Valid Email Required</string>
    <string name="activation_code_required">Please enter valid activation code</string>
    <string name="password_required">Please set atleast 8 to 15 digit alphanumeric password</string>
    <string name="password_required_text">(Please set atleast 8 digit alphanumeric password)</string>
    <string name="login_in">Login</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="not_registerd_yet_signup">Not Registered Yet? SIGN UP</string>
    <string name="by_loging_in_you_agree_to_our_terms_conditions">
        <![CDATA[By logging in, you agree to our terms & conditions]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="read_in_language">Read in language:</string>
    <string name="features">FEATURES</string>
    <string name="choose_the_features_you_enjoy">Choose the features you enjoy.</string>
    <string name="_1_translation_in_your_preferred_language">1. Translation in Your Preferred Language.</string>
    <string name="see_the_audio_and_text_translation_in_your_preferred_language">See the Audio and Text Translation in
        Your Preferred Language.
    </string>
    <string name="karaoke">2. Karaoke</string>
    <string name="enjoy_the_music_with_red_highlighted_text">Enjoy the Music with Red Highlighted Text.</string>
    <string name="popdot_text">Popdot</string>
    <string name="Popdot">3. Popdot</string>
    <string name="_3_">3</string>
    <string name="follow_the_english_lyrics_with_the_red_bouncing_ball">Follow the English Lyrics with the Red Bouncing
        Ball
    </string>
    <string name="time_to_speak">4. Time to Speak</string>
    <string name="watch_the_video_and_read_the_english_lyrics">Watch the Video and Read the English Lyrics.</string>
    <string name="practice">5. Practice</string>
    <string name="practice_the_word_that_you_ve_just_said">Practice the Word that You’ve Just Said.</string>
    <string name="total_score">6. Total Score</string>
    <string name="tap_on_the_score_and_see_all_the_words_you_have_repeated">Tap on the Score and See All the Words You
        Have Repeated.
    </string>
    <string name="rank_the_song">7. Rank the Song</string>
    <string name="the_popularity_of_the_song_is_ranked_in_the_playlist">The Popularity of the Song is Ranked in the
        Playlist.
    </string>
    <string name="_8_">8</string>
    <string name="enjoy_the_youtube_video">Enjoy the YouTube Video.</string>
    <string name="start_text">Start</string>
    <string name="karaoke_checked">karaoke_checked</string>
    <string name="popdot_checked">popdot_checked</string>
    <string name="mic_testing_fragment">MicTestingFragment</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="song">Song</string>
    <string name="my_play_list">My Playlist</string>
    <string name="history">History</string>
    <string name="song_name">Love, love me do</string>
    <string name="singer_name">The Battles</string>
    <string name="numberOfLike">328</string>
    <string name="_1">#99</string>
    <string name="word_count_number">Word Count: 51</string>
    <string name="length_number">Length: 2:51</string>
    <string name="word_list">Word List</string>
    <string name="my_profile">My Profile</string>
    <string name="be_a_member">Be a Member</string>
    <string name="faq">FAQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="zero">0</string>
    <string name="log_out">Log Out</string>
    <string name="total">Total</string>
    <string name="apply">Apply</string>
    <string name="filter_songs_by">Filter Songs by</string>
    <string name="reset">Reset</string>
    <string name="word_count">Word Count</string>
    <string name="artist_name">Artist Name</string>
    <string name="length">Length (seconds)</string>
    <string name="genre">Genre</string>
    <string name="keywords">Keywords</string>
    <string name="FEMALE">FEMALE</string>
    <string name="TTS_name_request">en-GB-Standard-A</string>
    <string name="MP3">MP3</string>
    <string name="language_short_name">Language Short Name</string>
    <string name="en">en</string>
    <string name="feature_screen">Feature Screen</string>
    <string name="mic_testing_screen">Mic Testing Screen</string>
    <string name="onboarding_frag_screen">Onboarding Fragment Screen</string>
    <string name="skip_guest_login">skip guest login</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="enter_activation_code">Enter Activation Code</string>
    <string name="verification">Verification</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="forgot_password_text">Enter the email address associated with your account, and we\'ll email you a
        temporary password to reset your password.
    </string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="enter_temporary_password">Enter Temporary Password</string>
    <string name="save">save</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="access_token">accessToken</string>
    <string name="open_login">Open Login</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="signup_fragment">Signup Fragment</string>
    <string name="is_logged_in">isLoggedIn</string>
    <string name="English">English</string>
    <string name="resend_activation_code">Resend Activation Code</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="skip">Skip</string>
    <string name="please_accept_terms_and_conditions">Please accept terms and conditions to continue</string>
    <string name="audio_permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="LINEAR16">LINEAR16</string>
    <string name="encoded_string">encodedString</string>
    <string name="unable_to_translate">Unable to translate</string>
    <string name="please_provide_below_information">Please provide below information</string>
    <string name="we_sent_you_a_code_to_verify_your_email">We sent you a code to verify\nyour email</string>
    <string name="enter_code">Enter Code\u0020</string>
    <string name="resend">Resend</string>
    <string name="zero_time">00:00</string>
    <string name="i_didnt_receive_a_code">I didn\'t receive a code!</string>
    <string name="i_love_music">I Love Music!</string>
    <string name="try_again">Try Again</string>
    <string name="US">US</string>
    <string name="speak_text">Speak Text</string>
    <string name="wrong_input">Oops!</string>
    <string name="try_again_and_say">Please try again and say -</string>
    <string name="move_closer_to_mic">Please move closer to mic so we can hear you!</string>
    <string name="you_are_already_registered_with_us_please_login">You are already registered with us, please login
    </string>
    <string name="from_activation">from_activation</string>
    <string name="activation_fragment">activation_fragment</string>
    <string name="email_id_not_registered_with_us">Email not registered with us</string>
    <string name="no_matching_artist">No Matching Artist</string>
    <string name="no_matching_data">No Matching Data</string>
    <string name="ok">OK</string>
    <string name="no_data_found">No Matching Artist</string>
    <string name="support_speech">Your device doesn\'t support speech input</string>
    <string name="say_artist_name">Say artist name!</string>
    <string name="say_something">Say something</string>
    <string name="songs_word_count">Word Count:</string>
    <string name="song_length">Length:</string>
    <string name="song_sec">sec</string>
    <string name="hash">#</string>
    <string name="temporary_password_has_been_sent_on_your_email_address">Temporary password has been sent on your email
        address
    </string>
    <string name="login">Login</string>
    <string name="no_connection">No Connection!</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try
        again.
    </string>
    <string name="last_name">Last Name *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="privacy_policy_accept"><![CDATA[I accept terms & conditions and privacy policy.]]></string>
    <string name="complete_sign_up">Complete Sign up</string>
    <string name="enter_email_or_phone_number">Enter Email or Phone Number</string>
    <string name="already_a_member_login">Already have an account! Login</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="email_text">Email *</string>
    <string name="first_name">First Name*</string>
</resources>