<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SplashActivity"
        android:background="@drawable/bg_splash">

    <ImageView
            android:id="@+id/act_splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_splash"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_180"
            android:contentDescription="@string/egowall_image_is_not_found"/>
    <TextView
            android:text="@string/egowall"
            android:layout_below="@id/act_splash_logo"
            android:layout_marginTop="@dimen/size_14"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/be_the_real_you"
            android:layout_marginTop="@dimen/size_500"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>