<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:padding="@dimen/size_30"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EmailPhoneFragment">

    <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/signup"
            android:fontFamily="@font/mulibold"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_17"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/size_100"
            android:id="@+id/til_frag_email_phone"
            app:hintTextAppearance="@style/HintText"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_or_phone_number">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_marginTop="@dimen/size_90"
            android:layout_gravity="center_horizontal"
            android:textColor="@drawable/custom_text"
            android:background="@drawable/custom_btn"
            android:textAllCaps="false"
            android:id="@+id/frag_email_phone_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    <TextView
            android:id="@+id/tv_frag_email_phone_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_34"
            android:padding="@dimen/size_16"
            android:text="@string/already_a_member_login"
            android:textColor="@color/black"
            android:textSize="@dimen/font_14"/>

</LinearLayout>