<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/size_32"
                android:paddingRight="@dimen/size_32"
                tools:context=".fragments.SignupFragment">

    <TextView
            android:layout_marginTop="@dimen/size_50"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/mulibold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_17"
            android:text="@string/complete_sign_up"
            android:id="@+id/tv_frag_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_marginTop="@dimen/size_34"
            android:layout_below="@id/tv_frag_signup"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/ll_frag_signup_name"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginRight="@dimen/size_8"
                android:id="@+id/til_frag_signup_fn"
                android:layout_weight="1"
                app:hintTextAppearance="@style/HintText"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_frag_signup_fn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_frag_signup_ln"
                android:layout_marginLeft="@dimen/size_8"

                android:layout_weight="1"
                app:hintTextAppearance="@style/HintText"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_frag_signup_ln"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/size_34"
            android:layout_below="@id/ll_frag_signup_name"
            android:id="@+id/til_frag_signup_password"
            app:hintTextAppearance="@style/HintText"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/tiet_frag_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/size_34"
            android:layout_below="@id/til_frag_signup_password"
            android:id="@+id/til_frag_signup_confirm_password"
            app:hintTextAppearance="@style/HintText"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_frag_signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
            android:layout_below="@id/til_frag_signup_confirm_password"
            android:id="@+id/rb_frag_signup"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:fontFamily="@font/muliregular"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_accept"
            android:layout_marginTop="@dimen/size_30"
            android:textSize="@dimen/font_10"/>
    <Button
            android:layout_marginTop="@dimen/size_16"
            android:textColor="@drawable/custom_text"
            android:background="@drawable/custom_btn"
            android:textAllCaps="false"
            android:id="@+id/btn_frag_signup"
            android:layout_below="@id/rb_frag_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
    <include
            android:id="@+id/progress_bar"
            layout="@layout/layout_progress"
            android:visibility="gone"/>

</RelativeLayout>