<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/size_32"
                tools:context=".fragments.CompleteSignupFragment"
                android:background="@color/white">

    <TextView
            android:id="@+id/tv_complete_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/mulibold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_17"
            android:text="@string/complete_sign_up"/>

    <LinearLayout
            android:id="@+id/ll_complete_signup_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:layout_below="@id/tv_complete_signup_text"
            android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_complete_signup_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_8"
                android:layout_weight="1"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/LoginTextInputLayoutErrorStyle"
                style="@style/LoginTextInputLayoutStyle"
                app:errorEnabled="true"
                android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_complete_signup_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_complete_signup_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_8"
                android:layout_weight="1"
                app:hintTextAppearance="@style/HintText"
                app:errorTextAppearance="@style/LoginTextInputLayoutErrorStyle"
                style="@style/LoginTextInputLayoutStyle"
                app:errorEnabled="true"
                android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_complete_signup_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_complete_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:layout_below="@id/ll_complete_signup_name_container"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/LoginTextInputLayoutErrorStyle"
            style="@style/LoginTextInputLayoutStyle"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:hint="@string/enter_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_complete_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_complete_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:layout_below="@id/til_complete_signup_password"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/LoginTextInputLayoutErrorStyle"
            style="@style/LoginTextInputLayoutStyle"
            app:errorEnabled="true"
            android:hint="@string/confirm_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_complete_signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
            android:id="@+id/rb_complete_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_complete_signup_confirm_password"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/muliregular"
            android:text="@string/privacy_policy_accept"
            android:layout_marginTop="@dimen/size_20"
            android:textSize="@dimen/font_10"/>

    <Button
            android:id="@+id/btn_complete_signup_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:textColor="@drawable/custom_text"
            android:background="@drawable/custom_btn"
            android:textAllCaps="false"
            android:layout_below="@id/rb_complete_signup"
            android:text="@string/next"
            android:enabled="false"/>

    <include
            android:id="@+id/pb_complete_signup"
            layout="@layout/layout_progress"
            android:visibility="gone"/>

</RelativeLayout>